--- a/style.css
+++ b/style.css
@@ -12,19 +12,12 @@ body{
 }
 #myCanvas
 {
+    margin-top: 30px;
 	border-width:10px;
 	background-color: white; 
 	border-style:ridge;
     background-image: url("racing.jpg");
 }
-h1{
+h1,h4{
 	color: white !important;
-}
-h4{
-	color: white !important;
-}
-body{
-	background-image: url("racing.gif");
-    background-position: center;
-    background-size: cover;
 }
